# src/router.ts
@@ -1,11 +1,11 @@
-import type { Application } from  '../deps.ts';
-import testRouter from './api/test/test.router.ts';
+import type { Application } from "../deps.ts";
+import testRouter from "./api/example/example.router.ts";
 
 const init = (app: Application) => {
-    app.use(testRouter.routes());
-    app.use(testRouter.allowedMethods());
-}
+  app.use(testRouter.routes());
+  app.use(testRouter.allowedMethods());
+};
 
 export default {
-    init,
+  init,
 };
